# fast_api_course

./: pyproject.toml
app/: main.py
app/application/: exceptions.py
app/application/dto/: auth_token.py
app/application/interfaces/: unit_of_work.py
app/application/interfaces/repositories/: __init__.py  course_repository.py  lecture_repository.py  module_repository.py  section_repository.py
app/application/interfaces/services/: token_service.py
app/application/use_cases/: __init__.py
app/application/use_cases/auth/: login_user.py  register_user.py
app/application/use_cases/courses/: delete_course.py  get_course_structure.py  update_course.py
app/application/use_cases/lectures/: create_lecture.py  delete_lecture.py  get_lecture.py
app/application/use_cases/modules/: create_module.py  delete_module.py  update_module.py
app/domain/: exceptions.py
app/domain/entities/: course.py  lecture.py  module.py  section.py
app/infrastructure/config/: settings.py
app/infrastructure/database/: __init__.py  database.py  unit_of_work.py
app/infrastructure/security/: jwt_token_service.py
app/presentation/api/: dependencies.py
migrations/: env.py
migrations/versions/: 2a56dfe09820_initial_schema.py
tests/: conftest.py
tests/integration/api/: test_auth_and_protection.py  test_content_api.py
tests/integration/e2e/: test_mvp_flow.py  test_remove_flow.py
tests/unit/application/: test_auth_use_cases.py  test_content_write_use_cases.py
tests/unit/domain/: test_course.py  test_lecture.py  test_module.py  test_section.py  test_user.py
(+22 files in other folders)
